# platform/src/persistence/__dtos__/patients.dto.ts
@@ -6,6 +6,7 @@ export type IPatientCreate = {
   name: string
   phone: string
   address: string
+  doctorIds: string[]
 }
 
 export type IPatientUpdate = {
