# platform/src/persistence/__dtos__/users.dto.ts
@@ -4,9 +4,20 @@ export interface IUserLogin {
   email: string
   password: string
 }
-export type IUserRegister = Omit<User, "id" | "createdAt" | "updatedAt">
+
 export type IUserProfile = Omit<User, "password">
-export type IUserUpdate = Omit<
-  User,
-  "role" | "doctorNumber" | "createdAt" | "updatedAt"
->
+
+export interface IUserRegister {
+  name: string
+  email: string
+  password: string
+  role: string
+  doctorNumber?: number
+}
+
+export interface IUserUpdate {
+  id: string
+  name?: string
+  email?: string
+  password?: string
+}
